--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=forohub
+spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub
+spring.datasource.username=root
+spring.datasource.password=Ilike2pizza@
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+server.error.include-stacktrace=never
